#46 - Upgraded into Spring Boot 2.7.6 version ✏️📗:octocat:⬆

--- a/spring-oauth2-employee-service/src/main/resources/application.properties
+++ b/spring-oauth2-employee-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ rest.security.cors.allowed-origins=*
 rest.security.cors.allowed-headers=*
 rest.security.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
 rest.security.cors.max-age=3600
-rest.security.issuer-uri=http://localhost:8080/auth/realms/dev
+rest.security.issuer-uri=http://localhost:8080/auth/realms/PoweRanger
 security.oauth2.resource.id=employee-service
 security.oauth2.resource.token-info-uri=${rest.security.issuer-uri}/protocol/openid-connect/token/introspect
 security.oauth2.resource.user-info-uri=${rest.security.issuer-uri}/protocol/openid-connect/userinfo
